# garb

./: .gitignore  CMakeLists.txt  a.out  app.out  main.cpp  readme.txt
BACKEND/: server.cpp  server.h
BACKEND/Header/: cmake_helper.h.in
BACKEND/Helper/: Authorization.h  helper.h  md5.h
BACKEND/Module/: Module.h
BACKEND/Module/Billing/: Billing.cpp  Billing.h
BACKEND/Module/Inventory/: Inventory.cpp  Inventory.h
BACKEND/Module/Request/: RequestManagement.cpp  RequestManagement.h
BACKEND/Static/: docs.css  docs.js
BACKEND/Static/data/: schema.json
BACKEND/Templates/: docs.html
BACKEND/User/: Middleware.h  User.cpp  User.h
BACKEND/User/Admin/: Admin.cpp  Admin.h
BACKEND/Utility/: Utility.h
BACKEND/Utility/Docs/: Docs.cpp  Docs.h
BACKEND/Utility/Inventory/: Inventory.cpp  Inventory.h
BACKEND/Utility/Machine/: Machine.cpp  Machine.h
BACKEND/Utility/Project/: Project.cpp  Project.h
BACKEND/Utility/Server/: Machine.cpp  Machine.h
Header/: version_config.h
UI/: .gitignore  README.md  package.json
UI/public/: index.html
UI/src/: App.js  formSource.js
UI/src/pages/: index.js
boost/lib/: libboost_atomic.so.1.84.0  libboost_chrono.so.1.84.0  libboost_container.so.1.84.0  libboost_context.so.1.84.0  libboost_contract.so.1.84.0  libboost_coroutine.so.1.84.0  libboost_date_time.so.1.84.0  libboost_fiber.so.1.84.0  libboost_filesystem.so.1.84.0  libboost_graph.so.1.84.0  libboost_iostreams.so.1.84.0  libboost_json.so.1.84.0  libboost_locale.so.1.84.0  libboost_log.so.1.84.0  libboost_log_setup.so.1.84.0  libboost_math_c99.so.1.84.0  libboost_math_c99f.so.1.84.0  libboost_math_c99l.so.1.84.0  libboost_math_tr1.so.1.84.0  libboost_math_tr1f.so.1.84.0  libboost_math_tr1l.so.1.84.0  libboost_nowide.so.1.84.0  libboost_prg_exec_monitor.so.1.84.0  libboost_program_options.so.1.84.0  libboost_random.so.1.84.0  libboost_regex.so.1.84.0  libboost_serialization.so.1.84.0  libboost_stacktrace_addr2line.so.1.84.0  libboost_stacktrace_backtrace.so.1.84.0  libboost_stacktrace_basic.so.1.84.0  libboost_stacktrace_noop.so.1.84.0  libboost_system.so.1.84.0  libboost_thread.so.1.84.0  libboost_timer.so.1.84.0  libboost_type_erasure.so.1.84.0  libboost_unit_test_framework.so.1.84.0  libboost_url.so.1.84.0  libboost_wave.so.1.84.0  libboost_wserialization.so.1.84.0
jwt/: defaults.h  jwt.h  traits.h
(+165 files in other folders)
